[package]
name = "anndata-memory"
version = "0.1.0-alpha.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/SingleRust/Anndata-Memory"
description = "Thread-safe AnnData-like structure for single-cell genomics data in Rust. Provides controlled mutability, efficient memory management, and flexible data manipulation. Ideal for concurrent bioinformatics applications."

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
log = "0.4"
indexmap = { version = "2.2", features = ["rayon"] }
itertools = "0.12"
ndarray = { version = "0.15" }
nalgebra-sparse = "0.9"
num = "0.4"
polars = { version = "0.40", features = ["lazy", "decompress-fast", "ndarray", "dtype-full"] }
parking_lot = "0.12"
replace_with = "0.1"
smallvec = "1.13"
rayon = "1.10"
permutation = "0.4"
anndata = "0.4.2"
anndata-hdf5 = "0.3.0"

[dev-dependencies]
tempfile = "3.2"
proptest = "1"
rand = "0.8.5"
ndarray-rand = "0.14"
nalgebra = { version = "0.32", features = ["rand"] }